# beatboard

./: .gitignore  Makefile  Makefile.am  Makefile.old  README  autogen.sh  configure.ac
etc/: Makefile  httpd.conf  nginx.conf  ngircd.conf
etc/init.d/: apachectl  bbircd  nginx
lib/: junit-4.5.LICENSE.txt
service/: Makefile
service/bb_bbircd/: run
service/bb_evhttp_search_client/: run
service/bb_logapibbevqueue/: run
service/bb_logapiserver/: run
service/bb_memcached/: run
service/bb_memcached/log/: run
service/bb_nginx/: run
service/bb_ngircd/: run
service/bb_searchapiserver/: run
service/bb_searchapiserver/log/: run
src/authapi/: Makefile  authapi.proto  authapi_service.cpp  authapi_service.h  authapi_service_client_evhttp.cpp  authapi_service_client_evhttp.h  authapi_service_client_evhttp_main.cpp  authapi_service_common.cpp  authapi_service_common.h  authapi_service_main.cpp  authapi_service_rpc.cpp  authapi_service_rpc.h  authapi_service_sample_client.cpp  authapi_service_sample_client_evhttp.cpp
src/authapi/authui/: login.cgi  login.html  login.js  signup.cgi  signup.html  signup.js
src/bbbackend/: ActiveMQReceiver.java  ActiveMQReceiverTimeout.java  HbaseClient.java  HbaseIrcLogClient.java  IRCLogCollector.java  InvalidProtoclBufferException.java
src/bbbackend/bbmq/: bbmq.cpp  bbmq.h  bbprotobuf.pb.cc  bbprotobuf.pb.h
src/bbgrapher/: bbgrapher.rb
src/bbircd/: Doxyfile  Makefile  Makefile.am  bbircd.cpp  bbircd.h  bblogger.cpp  bblogger.h  http_api_notifier.cpp  http_api_notifier.h  http_api_server.cpp  http_api_server.h  irc_client_operation.cpp  irc_client_operation.h  log4cpp.init  log4cpp_def.h  session_manager.cpp  session_manager.h  test.cpp
src/bbui/: Makefile  bb.css  bb_iphone.css  bbapi.js  bbui.js  cgicctest.cpp  connect.cpp  index.html  index_freenode.html  init_freenode.js  init_standard.js  join.cpp  join_channel.html  jquery-1.3.2.min.js  privmsg.cpp  send_message.html  top.html
src/bbui/test/: sample.html  test_bbui.js
src/bbui/ui/: bb.ui.draggable.js
src/libapicommon/: Makefile  Makefile.am  api_common.cpp  api_common.h  api_common_main.cpp  api_memcached.cpp  api_memcached.h
src/libapicommon/tests/: Makefile  test_api_common.cpp
src/libbbdrizzle/: Makefile  Makefile.am  Makefile.old  drizzle_client.cpp  drizzle_client.h  drizzle_client_main.cpp  drizzle_response.h
src/libbbdrizzle/tests/: Makefile  test_bbdrizzle.cpp
src/libbbevqueue/: Makefile  Makefile.am  Makefile.old  bb_ircd_event.proto  bb_ircd_event_queue.cpp  bb_ircd_event_queue.h  bb_protobuf_queue.h  bb_protobuf_queue_memcached.cpp  bb_protobuf_queue_memcached.h  bb_queue_index.proto  memd_cas_test.cpp  memd_client.cpp  memd_initializer.cpp
src/libbbirc/: Makefile  Makefile.am  bb_exception.h  irc_channel.cpp  irc_channel.h  irc_client.cpp  irc_connection.cpp  irc_connection.h  irc_proto.h  irc_proto.rl  scale_test1.cpp  test.cpp
src/libbbirc/ruby/: Makefile.bb  extconf.rb  libbbirc.i  sample.rb
src/libbbirc/tests/: Makefile  test.cpp  test_irc_channel.cpp  test_irc_connection.cpp  test_irc_proto.cpp
src/libbbrpc/: Makefile  Makefile.am  bb_rpc_channel.cpp  bb_rpc_channel.h  bb_rpc_client_evhttp.cpp  bb_rpc_client_evhttp.h  bb_rpc_controller.cpp  bb_rpc_controller.h  bb_rpc_service.cpp  bb_rpc_service.h  client_event_status.cpp  client_event_status.h  event_status.cpp  event_status.h  rpc_server.cpp  rpc_server.h  rpccommon.cpp  rpccommon.h  sample.pb.h  sample.proto  sample_rpc_client.cpp  sample_rpc_client.i  sample_rpc_client_evhttp.cpp  sample_rpc_client_evhttp.h  sample_rpc_client_evhttp_main.cpp  sample_rpc_service.cpp  samplerpc.cgi  samplerpc.js  samplerpcui.html
src/libbbrpc/tests/: Makefile  bb_sample_rpc.cpp  bb_sample_rpc.h  bb_sample_rpc_client.cpp  bb_sample_rpc_client.h  example_service.cpp  example_service.h  test_bbrpc.cpp
src/logapi/: Makefile  Makefile.am  logapi.pb.h  logapi.proto  logapi_service.cpp  logapi_service.h  logapi_service_client_bbevqueue.cpp  logapi_service_client_bbevqueue.h  logapi_service_client_bbevqueue_main.cpp  logapi_service_common.cpp  logapi_service_common.h  logapi_service_main.cpp  logapi_service_rpc.cpp  logapi_service_rpc.h  logapi_service_sample_client.cpp  logapi_service_sample_client_bbevqueue.cpp  message.cpp  message.h  message_map.cpp  message_map.h
src/searchapi/: Makefile  Makefile.am  Makefile.old  query.cpp  query.h  query_logger.cpp  query_logger.h  query_parser.cpp  query_parser.h  query_parser.rl  searchapi.proto  searchapi_service.cpp  searchapi_service.h  searchapi_service_client_evhttp.cpp  searchapi_service_client_evhttp.h  searchapi_service_client_evhttp_main.cpp  searchapi_service_common.cpp  searchapi_service_common.h  searchapi_service_main.cpp  searchapi_service_rpc.cpp  searchapi_service_rpc.h  searchapi_service_sample_client.cpp  searchapi_service_sample_client.i  searchapi_service_sample_client_evhttp.cpp
src/searchapi/searchui/: search.cgi  search.js  searchui.html
src/test/bbbackend/: ActiveMQReceiverTest.java  ActiveMQSender.java  HbaseDataGetClient.java  HbaseIrcLogClientTest.java  IRCLogCollectorTest.java
